@@ -1,3 +1,8 @@
+Fri Sep 01 16:51:52 BST 2000 Olly Betts
+
+	* apitest: pctcutoff1 now works with DA backend; tests which need
+	  document length are now a separate category.
+ 
 Fri Sep 01 15:52:06 BST 2000 Olly Betts
 
 	* apitest: Split off nodb tests into api_nodb.cc.
